/* Никольской буень велеть */

--- a/Никольской_буе_(Пенза_ёнкс).mw
+++ b/Никольской_буе_(Пенза_ёнкс).mw
@@ -57,19 +57,73 @@
 
 
 == Никольской буень велеть ==
+мокшонь велеть:
+* [[Карамала (Никольской буе)|Карамала]]<ref name="inpenza_КАРАМАЛА">[http://inpenza.ru/nikolsk/karamala.php КАРАМАЛА (Карамалы) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Карамалы)
+* [[Коржевка (Никольской буе)|Коржевка]]<ref name="inpenza_КОРЖЕВКА">[http://inpenza.ru/nikolsk/korzhevka.php КОРЖЕВКА Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Серман (Никольской буе)|Серман]]<ref name="inpenza_СЕРМАН">[http://inpenza.ru/nikolsk/serman.php СЕРМАН (Алексеевка) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Алексеевка, {{lang-ru|с. Серман}})
+
+печкасонь веле:
+* [[Усть-Инза (Никольской буе)|Усть-Инза]]<ref name="inpenza_УСТЬ-ИНЗА">[http://inpenza.ru/nikolsk/ust-inza.php УСТЬ-ИНЗА (Инза) Никольского района Пензенской области] {{ref-ru}}</ref> 
+
+рузонь велеть:
+* [[Александровка (Никольской буе)|Александровка]]<ref name="inpenza_Ныне"/>  - (икеле: Александровка 1-я), 
+* [[Аришка (Никольской буе)|Аришка]]<ref name="inpenza_АРИШКА">[http://inpenza.ru/nikolsk/arishka.php  АРИШКА (Рождественское) Никольского района Пензенской области] {{ref-ru}}</ref>  - (икеле: Рождественское) 
+* [[Ахматовка (Никольской буе)|Ахматовка]]<ref name="inpenza_АХМАТОВКА">[http://inpenza.ru/nikolsk/ahmatovka.php  АХМАТОВКА (Никольское, Богородское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Никольское, Богородское) 
+* [[Базарная Кеньша (Никольской буе)|Базарная Кеньша]]<ref name="inpenza_БАЗАРНАЯ КЕНЬША">[http://inpenza.ru/nikolsk/bazarnaya_kensha.php  БАЗАРНАЯ КЕНЬША (Трехсвятское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Трехсвятское) 
+* [[Гремячевка (Никольской буе)|Гремячевка]]<ref name="inpenza_ГРЕМЯЧЕВКА">[http://inpenza.ru/nikolsk/gremyachevka.php  ГРЕМЯЧЕВКА Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Журавли (Никольской буе)|Журавли]]<ref name="inpenza_Ныне"/> - (икеле: Журавлёвский)
+* [[Заборовка (Никольской буе)|Заборовка]]<ref name="inpenza_Ныне"/>
+* [[Заречный (Никольской буе)|Заречный]]<ref name="inpenza_Ныне"/> - (икеле: Говендяевка, Беклемишевка)
+* [[Зеленодольское (Никольской буе)|Зеленодольское]]<ref name="inpenza_Ныне"/> - (икеле: Центральная усадьба совхоза «Зеленодольский»)
+* [[Ильмино (Никольской буе)|Ильмино]]<ref name="inpenza_ИЛЬМИНО">[http://inpenza.ru/nikolsk/ilmino.php  ИЛЬМИНО (Богоявленское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Богоявленское)
+* [[Исаевка (Никольской буе)|Исаевка]]<ref name="inpenza_Ныне"/>
+* [[Казарка (Никольской буе)|Казарка]]<ref name="inpenza_КАЗАРКА ">[http://inpenza.ru/nikolsk/kazarka.php  КАЗАРКА (Шелалейка) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Шелалейка) 
+* [[Кенчурка (Никольской буе)|Кенчурка]]<ref name="inpenza_Ныне"/> - (икеле: Кеньчуровка)
+* [[Керенка (Никольской буе)|Керенка]]<ref name="inpenza_КЕРЕНКА">[http://inpenza.ru/nikolsk/kerenka.php  КЕРЕНКА (Троицкое, Байдиков) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Троицкое, Байдиков) 
+* [[Кивлей (Никольской буе)|Кивлей]]<ref name="inpenza_КИВЛЕЙ">[http://inpenza.ru/nikolsk/kivley.php  КИВЛЕЙ (Трудолюбовка) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Трудолюбовка) 
+* [[Корневой (Никольской буе)|Корневой]]<ref name="inpenza_Ныне"/> 
+* [[Кочетковка (Никольской буе)|Кочетковка]]<ref name="inpenza_Ныне"/> - (икеле: Агнеевка)
+* [[Кравково (Никольской буе)|Кравково]]<ref name="inpenza_КРАВКОВО">[http://inpenza.ru/nikolsk/kravkovo.php  КРАВКОВО Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Красное (Никольской буе)|Красное]]<ref name="inpenza_КРАСНОЕ">[http://inpenza.ru/nikolsk/krasnoye.php КРАСНОЕ (Усовка, Новая Усовка, Крашинское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Усовка, Новая Усовка, Крашинское) 
+* [[Лопуховка (Никольской буе)|Лопуховка]]<ref name="inpenza_ЛОПУХОВКА ">[http://inpenza.ru/nikolsk/lopuhovka.php ЛОПУХОВКА (Знаменское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Знаменское)
+* [[Маис (Никольской буе)|Маис]]<ref name="inpenza_МАИС ">[http://inpenza.ru/nikolsk/mais.php МАИС (Архангельское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Архангельское)
+* [[Маховка (Никольской буе)|Маховка]]<ref name="inpenza_Ныне"/> - (икеле: Моховка, Маховая, Трепаловка),
+* [[Междуречье (Никольской буе)|Междуречье]]<ref name="inpenza_МЕЖДУРЕЧЬЕ">[http://inpenza.ru/nikolsk/mezhdurechie.php МЕЖДУРЕЧЬЕ (Архангельское, Столыпино) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Архангельское, Столыпино)
+* [[Мичкас (Никольской буе)|Мичкас]]<ref name="inpenza_МИЧКАС">[http://inpenza.ru/nikolsk/michkas.php МИЧКАС (Мичкасс, Рогули) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Мичкасс, Рогули) 
+* [[Мокрая Поляна (Никольской буе)|Мокрая Поляна]]<ref name="inpenza_МОКРАЯ ПОЛЯНА">[http://inpenza.ru/nikolsk/mokr_polyana.php МОКРАЯ ПОЛЯНА Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Нечаевка (Никольской буе)|Нечаевка]]<ref name="inpenza_НЕЧАЕВКА">[http://inpenza.ru/nikolsk/nechaevka.php НЕЧАЕВКА (Высадки) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Высадки) 
+* [[Нижний Шкафт (Никольской буе)|Нижний Шкафт]]<ref name="inpenza_НИЖНИЙ ШКАФТ">[http://inpenza.ru/nikolsk/nizhniy_shkaft.php НИЖНИЙ ШКАФТ Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Никитянка (Никольской буе)|Никитянка]]<ref name="inpenza_Ныне"/> - (икеле: Никитинка, Никитянское Лесничество)
+* [[Новиковка (Никольской буе)|Новиковка]]<ref name="inpenza_НОВИКОВКА">[http://inpenza.ru/nikolsk/novikovka.php НОВИКОВКА Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Новоараповка (Никольской буе)|Новоараповка]]<ref name="inpenza_Ныне"/>
+* [[Ночка (Никольской буе)|Ночка]]<ref name="inpenza_Ныне"/> - (икеле: Старая Ночка, Ночька),
+* [[Ночка (Никольской буе, чугункань станция)|чугункань станция Ночка]]<ref name="inpenza_Ныне"/>
+* [[Павловка (Никольской буе)|Павловка]]<ref name="inpenza_Ныне"/> - (икеле: Новопавловка, Чаис),
+* [[Покровка (Никольской буе)|Покровка]]<ref name="inpenza_ПОКРОВКА">[http://inpenza.ru/nikolsk/pokrovka.php ПОКРОВКА (Покровская Слобода) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Покровская Слобода)
+* [[Прудное (Никольской буе)|Прудное]]<ref name="inpenza_Ныне"/> - (икеле: Центральная усадьба совхоза «Никольский»),
+* [[Ребровка (Никольской буе)|Ребровка]]<ref name="inpenza_РЕБРОВКА">[http://inpenza.ru/nikolsk/rebrovka.php РЕБРОВКА (Архангельское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Архангельское)
+* [[Родники (Никольской буе)|Родники]]<ref name="inpenza_Ныне"/> - (икеле: Роднички)
+* [[Соколовка (Никольской буе)|Соколовка]]<ref name="inpenza_СОКОЛОВКА">[http://inpenza.ru/nikolsk/sokolovka.php СОКОЛОВКА (Никольское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Никольское)
+* [[Субботино (Никольской буе)|Субботино]]<ref name="inpenza_Ныне"/>
+* [[Сура (Никольской буе, оков)|Сура ошонь кондямо од веле]]<ref name="inpenza_СУРА">[http://inpenza.ru/nikolsk/sura.php Поселок городского типа СУРА Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Тюнярь (Никольской буе)|Тюнярь]]<ref name="inpenza_ТЮНЯРЬ ">[http://inpenza.ru/nikolsk/tyunyar.php ТЮНЯРЬ (Покровское) Никольского района Пензенской области] {{ref-ru}}</ref> - (икеле: Покровское) 
+* [[Усовка (Никольской буе)|Усовка]]<ref name="inpenza_Ныне"/> - (икеле: Старая Усовка)
+* [[Черняевка (Никольской буе)|Черняевка]] <ref name="inpenza_Ныне"/>
+
 эрзянь велеть:
 * [[Алово (Никольской буе)|Алово]] ({{lang-ru|с. Алово}})
+* [[Аншлейка (Никольской буе)|Аншлейка]]<ref name="Полубояров_Никольский район">Полубояров М. С. Весь Пензенский край. [http://www.suslony.ru/Penzagebiet/nikolsk.htm Никольский район] {{ref-ru}}</ref> ({{lang-ru|с. Аншлейка}}) 
 * [[Кенза (Никольской буе)|Кенза]]<ref>[http://inpenza.ru/nikolsk/bazarnaya_kensha.php БАЗАРНАЯ КЕНЬША (Трехсвятское) Никольского района Пензенской области] {{ref-ru}}</ref> ({{lang-ru|с. Базарная Кеньша}})
-* [[Вечкилей (Никольской буе)|Вечкилей]] ({{lang-ru|с. Вечкилей}})
+* [[Вечкилей (Никольской буе)|Вечкилей]]<ref name="Полубояров_Никольский район"/> (икеле: Вичкилейка<ref name="inpenza_ВЕЧКИЛЕЙ">[http://inpenza.ru/nikolsk/vechkiley.php  ВЕЧКИЛЕЙ (Вичкилейка) Никольского района Пензенской области] {{ref-ru}}</ref>, {{lang-ru|с. Вечкилей}})
 * [[Карамалы (Никольской буе)|Карамалы]]<ref name="Древности Пензенского края">Полубояров М.С. Древности Пензенского края в зеркале топонимики: М. Издательство «ФОН», 2010 – 224 с.  стр.105  ISBN 5-89022-094-2 {{ref-ru}}, {{ref-myv}}, {{ref-mdf}}</ref> ({{lang-ru|с. Карамалы}})
 * [[Лопуховка (Никольской буе)|Лопуховка]] ({{lang-ru|с. Лопуховка}})
+* [[Малое Пермиёво (Никольской буе)|Малое Пермиёво]]<ref name="inpenza_Ныне"> [http://inpenza.ru/nikolsk/settlements-existing.php Ныне существующие населенные пункты Никольского района Пензенской области] {{ref-ru}}</ref> (лиякс: Новое Пермиево, {{lang-ru|с. Малое Пермиёво}}) 
 * [[Митрофановка (Никольской буе)|Митрофановка]] ({{lang-ru|с. Митрофановка}})
-* [[Покш Пирнёв (Никольской буе)|Покш Пирнёв]] ({{lang-ru|с. Большое Пермиёво}})
-* [[Сабан веле (Никольской буе)|Сабан веле]] - (лиякс кортыть: '''Сурвеле''', {{lang-ru|с. Сабаново, Сабановка}})
+* [[Новая Селя (Никольской буе)|Новая Селя]]<ref name="inpenza_НОВАЯ СЕЛЯ">[http://inpenza.ru/nikolsk/novaya_selya.php НОВАЯ СЕЛЯ Никольского района Пензенской области] {{ref-ru}}</ref>
+* [[Покш Пирнёв (Никольской буе)|Покш Пирнёв]]<ref name="Полубояров_Никольский район"/> (икеле: Пермиево<ref name="inpenza_БОЛЬШОЕ ПЕРМИЁВО">[http://inpenza.ru/nikolsk/b_permiyevo.php  БОЛЬШОЕ ПЕРМИЁВО (Пермиево) Никольского района Пензенской области] {{ref-ru}}</ref>, {{lang-ru|с. Большое Пермиёво}})
+* [[Сабан веле (Никольской буе)|Сабан веле]] - (лиякс кортыть: '''Сурвеле''', {{lang-ru|с. Сабаново, Сабановка<ref name="inpenza_САБАНОВО">[http://inpenza.ru/nikolsk/sabanovo.php САБАНОВО (Сабановка) Никольского района Пензенской области] {{ref-ru}}</ref>}})
+* [[Старая Селя (Никольской буе)|Старая Селя]]<ref name="inpenza_СТАРАЯ СЕЛЯ">[http://inpenza.ru/nikolsk/st_selya.php СТАРАЯ СЕЛЯ Никольского района Пензенской области] {{ref-ru}}</ref>- ({{lang-ru|с. Старая Селя}})
 * [[Явичей (Никольской буе)|Явичей]] ({{lang-ru|с. Явичей}})
-
-мокшонь велеть:
-* [[Серман (Никольской буе)|Серман]]<ref>[http://inpenza.ru/nikolsk/serman.php СЕРМАН (Алексеевка) Никольского района Пензенской области] {{ref-ru}}</ref> ({{lang-ru|с. Серман}})
 
 == Сёрм.: ==
 <references />
