--- a/Ведьава.mw
+++ b/Ведьава.mw
@@ -1,4 +1,4 @@
-[[Артовкс:Rusalka Bilibin.jpg|thumb |Ве́дьава - [[Ivan Bilibin]], [[1934 ие|1934]]]]
+[[Артовкс:Rusalka Bilibin.jpg|thumb |Ве́дьава - [[Иван Билибин]], [[1934 ие|1934]]]]
 
 '''Ве́дьава''' — ведень кирдиця, азорава; [[Вечкема|вечкемань]] [[Пазава]]. 
 
