*Empty MediaWiki Message*

--- a/Николаень_буе.mw
+++ b/Николаень_буе.mw
@@ -1,5 +1,13 @@
 '''Николаень буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Николаевка]]. Буень масторонь покшолмазо 2092 вп². Эрицятнеде — 33,4 тёжат, [[эрзят]] 30 %, [[рузт]] 43 %, [[печкаст]] 23 %, [[ветькеть]] 3 %.
 
+==Велеть==
+===эрзянь===
+* [[Болдасево (Николаень буе)|Болдасево]]<ref name="Дуняшин_Рудазов ведесь">Дуняшин А. В. Рудазов ведесь чуди, Москов, ГИЖ, 1928 {{ref-myv}}</ref> - ({{lang-ru|с. Болдасьево}})
+
+== Сёрм.: ==
+<references />
+
+
 {{Ульянонь ёнксонь буетне}}
 
 [[Категория:Ульянонь ёнксонь буетне|Н]]
