--- a/Сакулька_(Ицял_буе).mw
+++ b/Сакулька_(Ицял_буе).mw
@@ -39,7 +39,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 396
+  |эрицятне               = 396<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 2010
   |плотность              = 
   |агломерация            = 
@@ -58,7 +58,34 @@
  |сайт                    = 
  |язык сайта              = 
 }}
-'''Сакулька''' ({{Lang-ru|Папулёво}}) — эрзянь велесь [[Ицял буе|Ицял буесэ]].
+'''Сакулька<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{Lang-ru|Папулёво}}) — эрзянь<ref name="Кулят инфо_Папулево">[http://www.kulyat.info/zemlya-i-lyudi-ichalki/10049-selo-papulevo.html Кулят инфо Село Папулево] {{ref-ru}}</ref> велесь [[Ицял буе|Ицял буесэ]].
+
+Ашти [[Ратор лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|[[1863 ие]]стэ лецтяви кода Папулево веле, 80 кудот-кардазт марто Ордань уездсэ. Эйстэст 459 цёрат ды 504 ава ломанть. )}}
+{{oq|ru|В «СНМ Симбирской губернии» (1863) – Папулево, село из 80 дворов: 459 мужчин и 504 женщины Ардатовского уезда. }}
+{{Цитатань пе}}
+
+Эрицятнеде: 
+
+{| class="wikitable"
+|-
+! Ие !! 1624  !! 1671!! 1696 !! 1719 !! 1913  !!2002 !! 2010
+|-
+|лом. ||10 кард./ 12 цёр.<ref name="Кулят инфо_Папулево"/>||18 кард./ 27 цёр.<ref name="Кулят инфо_Папулево"/>||16 кард./ 46 цёр.<ref name="Кулят инфо_Папулево"/>||56 цёр.<ref name="Кулят инфо_Папулево"/>||274 кард. (970 цёр + 1052 ава)<ref name="Кулят инфо_Папулево"/>||396<ref name="Численность"/>||467<ref name="Численность"/>
+|}
+
+
+== Веленть лемденть  ==
+Лемесь–антропоним<ref name="Память, запечатленная в слове"/>, саеви кезэрень эрзянь '''Папула''' лемстэнть.
+
+== Содавикс ломанть те велестэнть ==
+* Фрол Сергеевич Кемайкин<ref name="Кулят инфо_Папулево"/> — васеньце вейсхозонь прявт 
+
+== Веленть эрямозо  ==
+
+
+== Лисьм.: ==
+<references />
 
 [[Category:Мордовиянь велеть]]
 [[Category:Ицял буень велеть]]
