--- a/Николаень_буе.mw
+++ b/Николаень_буе.mw
@@ -2,7 +2,17 @@
 
 ==Велеть==
 ===эрзянь===
+* [[Баевка (Николаень буе)|Баевка]]  
 * [[Болдасево (Николаень буе)|Болдасево]]<ref name="Дуняшин_Рудазов ведесь">Дуняшин А. В. Рудазов ведесь чуди, Москов, ГИЖ, 1928 {{ref-myv}}</ref> - ({{lang-ru|с. Болдасьево}})
+* [[Губашево (Николаень буе)|Губашево]]   
+* [[Давыдовка (Николаень буе)|Давыдовка]]   
+* [[Дубровка (Николаень буе)|Дубровка]]   
+* [[Иванцево (Николаень буе)|Иванцево]]   
+* [[Мордовский Канадей (Николаень буе)|Мордовский Канадей]]   
+* [[Телятниково (Николаень буе)|Телятниково]] 
+* [[Федоровка (Николаень буе)|Федоровка]] 
+
+
 
 == Сёрм.: ==
 <references />
