--- a/Инзейбуе.mw
+++ b/Инзейбуе.mw
@@ -1,6 +1,14 @@
 [[Артовкс:Coat of arms of Inzensky Raion.png|right|100px]]
 '''Инзейбуе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Инзей ош]]. Буень масторонь покшолмазо 2020,2 вп². Эрицятнеде — 38,3 тёжат, [[эрзят]] 9,4 %, [[рузт]] 85 %, [[печкаст]] 3,3 %.
 
+==Велеть==
+===эрзянь===
+* [[Оськино (Инзейбуе)|Оськино]]<ref name=" Республика молодая_c Оськино">[http://rm.saransk.ru/article_1956.html 24.02.2011  Республика молодая// Село Оськино, Ульяновская область]{{ref-ru}}</ref> - ({{lang-ru|с. Оськино}})
+
+== Лисьм.: ==
+<references />
+
+
 {{Ульянонь ёнксонь буетне}}
 
 [[Категория:Ульянонь ёнксонь буетне]]
