*Empty MediaWiki Message*

--- a/Николаень_буе.mw
+++ b/Николаень_буе.mw
@@ -2,14 +2,15 @@
 
 ==Велеть==
 ===эрзянь===
-* [[Баевка (Николаень буе)|Баевка]]  
+* [[Баева (Николаень буе)|Баева]] -  {{lang-ru|Баевка}}
+* [[Валдычи (Николаень буе)|Валдычи]] 
 * [[Болдасево (Николаень буе)|Болдасево]]<ref name="Дуняшин_Рудазов ведесь">Дуняшин А. В. Рудазов ведесь чуди, Москов, ГИЖ, 1928 {{ref-myv}}</ref> - ({{lang-ru|с. Болдасьево}})
 * [[Губашево (Николаень буе)|Губашево]]   
-* [[Давыдовка (Николаень буе)|Давыдовка]]   
+* [[Давыдвеле (Николаень буе)|Давыдвеле]] -  {{lang-ru|Давыдовка}}
 * [[Дубровка (Николаень буе)|Дубровка]]   
 * [[Иванцево (Николаень буе)|Иванцево]]   
 * [[Мордовский Канадей (Николаень буе)|Мордовский Канадей]]   
-* [[Телятниково (Николаень буе)|Телятниково]] 
+* [[Вазвеле (Николаень буе)|Вазвеле]]  -  {{lang-ru|Телятниково}}
 * [[Федоровка (Николаень буе)|Федоровка]] 
 
 
