*Empty MediaWiki Message*

--- a/Кузоватонь_буе.mw
+++ b/Кузоватонь_буе.mw
@@ -1,8 +1,19 @@
 [[Артовкс:Coat of Arms of Kuzovatovsky Raion.png|right|100px]]
 '''Кузоватонь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Кузоватово]]. Буень масторонь покшолмазо 2098 вп². Эрицятнеде — 29 тёжат, [[эрзят]] 27 %, [[рузт]] 66 %, [[печкаст]] 0,7 %, [[ветькеть]] 1,5 %.
 
+==Велеть==
+===эрзянь===
+* [[Кивать (Кузоватонь буе)|Кивать]] - ({{lang-ru|с. Оськино}})
+* [[Томылово (Кузоватонь буе)|Томылово]] - ({{lang-ru|с. Томылово}})
+
 == Налткеть ==
 * [http://kuzovatovo.ulo.ru/ Ульяновская область — МО «Кузоватовский район»] {{Ref-ru}}
+
+
+== Лисьм.: ==
+<references />
+
+
 
 {{Ульянонь ёнксонь буетне}}
 
