*Empty MediaWiki Message*

--- a/Суронь_буе.mw
+++ b/Суронь_буе.mw
@@ -1,6 +1,12 @@
 [[Артовкс:Coat of arms of Sursky Raion.png|right|100px]]
 '''Суронь буе''' — [[Ульянонь ёнкс|Ульянонь ёнксонь]] буесь. Прявтошось — [[Суронь веле|Суронь велесь]]. Буень масторонь покшолмазо 1688 вп². Эрицятнеде — 23,5 тёжат, [[эрзят]] 5 %, [[рузт]] 87 %, [[печкаст]] 1 %, [[ветькеть]] 4 %.
 
+==Велеть==
+===эрзянь===
+* [[Промзина (Суронь буе)|Промзина]]<ref name="Эрзянь мастор_332">Газета «Эрзянь мастор» №332, 2010 НАЦИОНАЛЬНЫЕ ГЕРОИ И ВЫДАЮЩИЕСЯ ДЕЯТЕЛИ НАРОДА ЭРЗЯ {{ref-myv}}, {{ref-ru}}</ref> - ({{lang-ru|с. Промзино}})
+
+
+
 == Налткеть ==
 * [http://surskoe.ulo.ru/ Администрация МО «Сурский район»] {{Ref-ru}}
 
