*Empty MediaWiki Message*

--- a/Эскин,_Анатолий_Устинович.mw
+++ b/Эскин,_Анатолий_Устинович.mw
@@ -24,7 +24,7 @@
 }}
 '''Эскин Анатолий Устинович''' ([[1937 ие]]нь [[медьковонь 10 чи]]стэ [[Мордовия Республикась|Мордовиянь]] [[Кочкурбуе]]нь [[Симилей веле]]сэ - [[1977 ие]]нь [[даволковонь 25 чи]]стэ) — [[Эрзя|эрзянь]] валморозей.
 
-Чачсь [[Симилей веле]]сэ [[Кочкурбуе]]сэ [[Мордовия]]ссо. Прядызэть Мордовский госуниверситетэнть 1960 иестэ. 
+Чачсь [[Симилей веле]]сэ<ref name="ГБУ РК_Эскин ">[http://www.nbrkomi.ru/page/2929/  ГБУ РК «Национальная библиотека Республики Коми». Эскин Анатолий Устинович]{{ref-ru}}</ref> [[Кочкурбуе]]сэ [[Мордовия]]ссо. Прядызэть Мордовский госуниверситетэнть 1960 иестэ. 
 
 Важодсь [[Сятко (журнал-ковставкс)|«Сятко» ковставксо]], Мордовиянь кирьяпусмонь издательствасо, телерадиокомитетсэ. 
 [[1963 ие]]стэ лись васенце валморонь пурнавксозо  «Оят-ялгат» ({{Lang-ru|«Друзья-товарищи»}}). 
@@ -44,7 +44,9 @@
 # Рогачёв, В. И. Эскин Анатолий Устинович [Текст] // Мордовия : энциклопедия : в 2-х т. / гл. ред. А. И. Сухарев. – Саранск, 2004. – Т. 2 : М-Я. – С. 548-549.
 # Эскин Анатолий Устинович [http://www.lib.e-mordovia.ru/Library/?Char=&id=162 Библиотека мордовской литературы]
 
-== Сёрм.: ==
+== Лисьм.: ==
+<references />
+
 
 [[Category:Эрзянь валморонь ладсийть|Э]]
 [[Category:Эрзянь кель|Э]]
