*Empty MediaWiki Message*

--- a/Симилей_веле_(Кочкурбуе).mw
+++ b/Симилей_веле_(Кочкурбуе).mw
@@ -71,7 +71,7 @@
 * К.И. Рассказов —Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 * Я.З. Наумкин — механизатор
 * А.П. Гребнева, Л.М. Тюрина — тонавтыцят
-* [[Эскин, Анатолий Устинович|А.У. Эскин]]<ref name="Библиотека_Эскин">[http://www.lib.e-mordovia.ru/Library/?Char=%DD&id=3 Библиотека мордовской литературы. Эскин Анатолий Устинович]{{ref-ru}}</ref> — [[эрзя]]нь валморонь ладсий
+* [[Эскин, Анатолий Устинович|А.У. Эскин]]<ref name="Библиотека_Эскин">[http://www.lib.e-mordovia.ru/Library/?Char=%DD&id=3 Библиотека мордовской литературы. Эскин Анатолий Устинович]{{ref-ru}}</ref><ref name="ГБУ РК_Эскин ">[http://www.nbrkomi.ru/page/2929/  ГБУ РК «Национальная библиотека Республики Коми». Эскин Анатолий Устинович]{{ref-ru}}</ref> — [[эрзя]]нь валморонь ладсий
 * Е.А. Пурилкина — морыцянь (хоронь) ветий
 * В.М. Четайкина — микшнемань важодиця
 
