--- a/Инзейбуе.mw
+++ b/Инзейбуе.mw
@@ -4,6 +4,7 @@
 ==Велеть==
 ===эрзянь===
 * [[Оськино (Инзейбуе)|Оськино]]<ref name=" Республика молодая_c Оськино">[http://rm.saransk.ru/article_1956.html 24.02.2011  Республика молодая// Село Оськино, Ульяновская область]{{ref-ru}}</ref> - ({{lang-ru|с. Оськино}})
+* [[Чей (Инзейбуе)|Чей]]<ref name="ГБУ РК_Калинкин">[http://www.nbrkomi.ru/page/2922/  ГБУ РК «Национальная библиотека Республики Коми».  Калинкин Иван Алексеевич ]{{ref-ru}}</ref> - ({{lang-ru|с. Челдаево}}) 
 
 == Лисьм.: ==
 <references />
