*Empty MediaWiki Message*

--- a/Од_Мурза_(Кочкурбуе).mw
+++ b/Од_Мурза_(Кочкурбуе).mw
@@ -73,7 +73,7 @@
 * В.И. Герасимов — Мордовиянь Тёкшшколань заслуженной важодиця
 * В.И. Клементьева — МАССР-нь заслуженной культурань важодиця 
 * В.Я. Сёмкин — МАССР-нь заслуженной шумбрачинь максыця 
-* [[Тарасова, Марина Андреевна|Марина Тарасова]]<ref>[http://www.nbrkomi.ru/page/2927/ Тарасова Марина Андреевна]{{Ref-ru}}</ref><ref name="Библиотека_Тарасова">[http://www.lib.e-mordovia.ru/Library/?Char=%D2&id=1  Библиотека Мордовской литературы. Тарасова Марина Андреевна] {{ref-ru}}</ref>—  эрзянь валморозей, сёрмадей  — сёрмадей, Россиянь сёрмадеень пурнавксонь совиця 
+* [[Тарасова, Марина Андреевна|Марина Тарасова]]<ref>[http://www.nbrkomi.ru/page/2927/ ГБУ РК «Национальная библиотека Республики Коми». Тарасова Марина Андреевна]{{Ref-ru}}</ref><ref name="Библиотека_Тарасова">[http://www.lib.e-mordovia.ru/Library/?Char=%D2&id=1  Библиотека Мордовской литературы. Тарасова Марина Андреевна] {{ref-ru}}</ref>—  эрзянь валморозей, сёрмадей  — сёрмадей, Россиянь сёрмадеень пурнавксонь совиця 
 
 ==Веленть эрямозо==
 Ульнесть 3 [[ведьгев]]ть, 3 [[ойень пивтема парть]]. [[1894 ие]]стэ Од Мурзасо ульнесть 215 кудот (1 414 лом.), важодсь тонавтнема тарка. [[1930 ие]]стэ теезь-пурназь вейсхозт «Од эрямо» ({{Lang-ru|«Новая жизнь»}}) ды «1 Мая», [[1950 ие]]стэ саезь — покшолгадозь «Победа» хозяйства,  1989 иестэ — 9 вейсэнь фэрмэрень хозяйстват(сехте покштнэ — «Вера», «Восток», «Мечта», «Нешке», «Росток», «Союз»). 
