*Empty MediaWiki Message*

--- a/Якстере_Лисьмапрят_(Похвистнева_буень).mw
+++ b/Якстере_Лисьмапрят_(Похвистнева_буень).mw
@@ -72,7 +72,7 @@
 * [[Кавтаськин, Андрей Семёнович]] — Советэнь Союзонь Мараля ({{Lang-ru|Герой Советского Союза}})
 * [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]]<ref name="«Эрзянь Мастор»" /> —  эрзянь кельсэ сёрмадей, валморонь ладсий, прозаик, куляньсёрмадей. 
 * [[Чувашов, Михаил Иванович|Михаил Иванович Чувашов]]<ref name="«Эрзянь Мастор»">[http://www.erzia.saransk.ru/arhiv.php?n=1190&nom11=257  «Эрзянь Мастор», №257, САМАРА ЁНКСОНЬ СОДАВИКС ЭРЗЯТНЕ]{{Ref-myv}}</ref> (1909 - 1973) —  эрзянь фольклоронь пурныця, этнограф.
-* [[Артур Моро]]<ref name="«Эрзянь Мастор»" /> (1909—1989) — [[Эрзя|эрзянь]] сёрмадей ды валморозей
+* [[Артур Моро]]<ref name="«Эрзянь Мастор»" /><ref name="ГБУ РК_Моро">[http://www.nbrkomi.ru/page/2925/ Национальная библиотека Респубоики Коми: Моро (Осипов) Артур Матвеевич]{{ref-ru}}</ref> (1909—1989) — [[Эрзя|эрзянь]] сёрмадей ды валморозей
 * [[Ревизов, Николай Егорович|Николай Егорович Ревизов]]<ref name="«Эрзянь Мастор»" /> (1927—2004) — эрзянь куляньсёрмадей, фотоартыця, валморозей.
 
 ==Веленть эрямозо==
