*Empty MediaWiki Message*

--- a/Самара_ёнкс.mw
+++ b/Самара_ёнкс.mw
@@ -77,7 +77,7 @@ MSKS=+1|
 #  [[Дуняшин, Алексей Васильевич|Дуняшин Алексей Васильевич]] (1904, Покш Толкан -1931, Самар ош). Эрзянь прозаик, публицист, критик.
 #  [[Раптанов, Тимофей Алексеевич|Раптанов Тимофей Алексеевич]] (1906 - 1936). Эрзянь сёрмадыця, прозаик, журналист.
 #  [[Радаев, Василий Кузьмич|Радаев Василий Кузьмич]] (1907 - 1991). Покш эрзянь валморозей, СССР-нь сёрмадеень вейсендявксонь совиця (1966), Мордовиянь Государственной премиянь лауреат (1979), раськень сёрмадей.
-#  [[Моро Артур|Артур Моро (Осипов Афанасий Матвеевич)]] (1909 -1989). Эрзянь валморозей.
+#  [[Моро Артур|Артур Моро (Осипов Афанасий Матвеевич)]]<ref name="ГБУ РК_Моро">[http://www.nbrkomi.ru/page/2925/ ГБУ РК «Национальная библиотека Республики Коми»: Моро (Осипов) Артур Матвеевич]{{ref-ru}}</ref> (1909 -1989). Эрзянь валморозей.
 #  Чувашев Михаил Иванович (1909, с.Красные Ключи Бугурусланского уезда Самарань губ. - 1973, с. Шентала Шенталинского района Куйбышевской обл.). Эрзянь фольклорист.
 #  [[Лукьянов, Алексей Миронович|Лукьянов Алексей Миронович]] (1910 -1991) Эрзянь валморозей, прозаик, куляньсёрмадей, СССР-нь сёрмадеень вейсендявксонь совиця (1935).
 #  [[Кириллов, Пётр Семёнович|Кириллов Петр Семёнович]] (1910 - 1955). Эрзянь валморозей, прозаик, драматург, ютавтыця.
