--- a/Адаж_(Кадонь_буе).mw
+++ b/Адаж_(Кадонь_буе).mw
@@ -40,7 +40,7 @@
  |высота центра НП        = 
  |климат                  = 
  |официальный язык        = 
-  |эрицятне               = 651<ref>[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
+  |эрицятне               = 651<ref name="Численность">[http://mrd.gks.ru/wps/wcm/connect/rosstat_ts/mrd/resources/5b9a09004d852094b428fd344d6b6963/923+сборник.pdf  Численность и размещение населения Республики Мордовия. Итоги Всероссийской переписи населения 2010 года] {{ref-ru}}</ref>
   |год переписи           = 
   |плотность              = 
   |агломерация            = 
@@ -60,14 +60,21 @@
  |язык сайта              = 
 }}
 
-'''Адаж''' ({{lang-ru|с. Адашево}})  — мокшонь<ref name="Многоликая">[http://mnogolik-mordovia.mrsu.ru/k_Adashevo.htm Многоликая Мордовия: Село Адешево] {{Ref-ru}}</ref> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
+'''Адаж<ref name="РГО_с. Адашево">[http://geo13.ru/reestr/object/747 Геопортал РГО в Республике Мордовия: с. Адашево] {{Ref-ru}}</ref>''', лиякс: '''Атяжав<ref name="Память, запечатленная в слове">Цыганкин Д. В. Память, запечатленная в слове. Словарь географических названий Республики Мордовия.  Саранск, 2005. – 431 с. {{ref-ru}}, {{ref-myv}}</ref>''' ({{lang-ru|с. Адашево}})  — мокшонь<ref name="РГО_с. Адашево"/> веле [[Мордовия]]со [[Кадоньбуе]]сэ.
+
+Ашти [[Исса лей]] лангсо. Кода лецтяви<ref name="Память, запечатленная в слове"/>:
+{{Цитатань ушодома}} ({{Lang-myv|([[1869 ие]]) ''Адашево (Никольское) – веле 203 кудот марто Инсаронь уездсэ''.}}
+{{oq|ru|В «СНМ Пензенской губернии» (1869) – Адашево (Никольское), село из 203 дворов  Инсарского уезда.}}
+{{Цитатань пе}}
+
+Эрицятнеде<ref name="Численность"/>: [[2002 ие]]стэ ульнесь 783 лом., 2010 иень ловномасонть - 651 лом.  
 
 == Веленть лемденть  ==
-
+Лемесь– антропоним<ref name="Память, запечатленная в слове"/>, теевсь ({{lang-tr|адаш}}  - {{lang-ru|«тезка»}})<ref name="Атаманов ">Атаманов М.Г. Словарь личных имен удмуртов.  Ижевск: УНИЯЛ, 1990. 393 с., с. 26 {{ref-ru}}</ref>'' валстонть. 
 
 == Содавикс ломанть те велестэнть ==
-
-
+Адаж велесэ чачсь:
+* [[Мишанина, Валентина Ивановна|Валентина Мишанина]]<ref name="ГБУ РК_Мишанина">[http://www.nbrkomi.ru/page/2924/  ГБУ РК «Национальная библиотека Республики Коми». Мишанина Валентина Ивановна]{{ref-ru}}</ref>—  мокшонь сёрмадей, прозаик, драматург. 
 
 == Сёрм.: ==
 <references />
