--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -21,7 +21,7 @@
 *[[Иркаев, Николай Лазаревич|Иркаев Н. Л.]] (01.1956 ― 04.1958) эли (04.1956 ― 01.1959)<ref name="Республиканская архивная служба">[http://www.sudbasoldata.ru/3409/ Республиканская архивная служба Республики Мордовия: Иркаев Николай Лазаревич (Документы) {{Ref-ru}}]]</ref>
 *[[Вечканов, Серафим Емельянович|Вечканов С.Е.]] (05.1958 ― 08.1959) 
 *[[Куторкин, Андрей Дмитриевич|Андрей Куторкин]] (09.1958 ― 06.1959) 
-*[[Мартынов, Александр К.]] (07.1959 ― 10.1963) 
+*[[Мартынов, Александр Константинович|Александр Мартынов]]<ref name="Библиотека_Мартынов">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=2 Библиотека Мордовской литературы. Мартынов Александр Константинович] {{ref-ru}}</ref> (07.1959 ― 10.1963) 
 *[[Пятаев, Емельян Иванович|Пятаев Е.И.]] (11.1963 ― 12.1966) 
 *[[Щеглов, Александр Сергеевич|Александр Щеглов]] (01.1967 ― 12.1971) 
 *[[Мартынов, А.К.]] (01.1972 ― 06.1977) 
