*Empty MediaWiki Message*

--- a/Сятко_(журнал-ковставкс).mw
+++ b/Сятко_(журнал-ковставкс).mw
@@ -24,7 +24,7 @@
 *[[Мартынов, Александр Константинович|Александр Мартынов]]<ref name="Библиотека_Мартынов">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=2 Библиотека Мордовской литературы. Мартынов Александр Константинович] {{ref-ru}}</ref> (07.1959 ― 10.1963) 
 *[[Пятаев, Емельян Иванович|Пятаев Е.И.]] (11.1963 ― 12.1966) 
 *[[Щеглов, Александр Сергеевич|Александр Щеглов]] (01.1967 ― 12.1971) 
-*[[Мартынов, А.К.]] (01.1972 ― 06.1977) 
+*[[Мартынов, Александр Константинович|Александр Мартынов]] (01.1972 ― 06.1977) 
 *[[Калинкин, Иван Алексеевич|Калинкин Иван Алексеевич]] (07.1977 ― 06.1984) 
 *[[Доронин, Александр Макарович]] (06.1984 ― 02.2000) 
 *[[Арапов, Александр Васильевич|Александр Арапов]] (03.2000 ―14.06.2011)
