*Empty MediaWiki Message*

--- a/Мартынов,_Александр_Константинович.mw
+++ b/Мартынов,_Александр_Константинович.mw
@@ -26,7 +26,7 @@
 
 Чачсь [[1913 ие]]нь [[даволковонь 8 чи]]стэ [[Саратов ёнкс]]сонь Петровской буень Синенькие велесэ<ref name="ГБУ РК_Мартынов">[http://www.nbrkomi.ru/page/2923/  ГБУ РК «Национальная библиотека Республики Коми». Мартынов Александр Константинович]{{ref-ru}}</ref> сокицянь-видицянь семиясо. Школань прядомодо мейле 1929 иестэ тусь тонавтнеме Петровскоень тонавтыцянь техникумс. Васенце валморонзо «Од пингень сёксь» ульнесь публиковазь 1931 иестэ «Якстере теште»<ref name="ГБУ РК_Мартынов"/>, «Ленинэнь киява» ды  «Эрзянь коммуна» кулялопатнесэ<ref name="Библиотека_Мартынов">[http://www.lib.e-mordovia.ru/Library/?Char=%CC&id=2 Библиотека Мордовской литературы. Мартынов Александр Константинович] {{ref-ru}}</ref>.
 
-[[1958 ие]]нь [[медьков]]сто [[1963 ие]]нь [[ожоков]]с важодсь [[Сятко (журнал-ковставкс)|«Сурань толт» ковставксонть]] прявтредакторокс<ref name="«Сятко2003_5»">«Сятко», №1,1― 114, 2003 ие, 5-це лоп. Зярдо ды кие журналонть прявтсоль{{Ref-myv}}</ref>. 1964-1971 иетнестэ ульнесь МАССР-нь сёрмадеень ветикуронть прявт<ref name="Библиотека_Мартынов"/>.
+[[1958 ие]]нь [[медьков]]сто ― [[1963 ие]]нь [[ожоков]]с ды [[1972 ие]]нь [[якшамков]]сто ― [[1977 ие]]нь [[аштемков]]с важодсь [[Сятко (журнал-ковставкс)|«Сурань толт» ковставксонть]] прявтредакторокс<ref name="«Сятко2003_5»">«Сятко», №1,1― 114, 2003 ие, 5-це лоп. Зярдо ды кие журналонть прявтсоль{{Ref-myv}}</ref>. 1964-1971 иетнестэ ульнесь МАССР-нь сёрмадеень ветикуронть прявт<ref name="Библиотека_Мартынов"/>.
 
 Васенце валморонь пурнавксось  «Морот счасияв эрямодо» 1938 иестэ, тей совась «Шутихин Гриша» поэмазояк. 1940 иестэ лись омбоце валморонь пурнавксозо – «Вечкема», тей совасть эрзянь кельсэ эрьва кодань раськень сёрмадеень ютавтомат. Ине Ойнань перть Алексей Мартыновонь шкинемазо лиснесь «Изнямос» (1942), «Изнямонь зорят» (1944) пурнавкстнэнень.  Те шканть сон сёрмадызе «Монь ялгам» ёвтнеманть валморосо, конань прядызе 1946 иестэ. 
 
@@ -36,7 +36,7 @@
 
 Ламо кеменень иеть важодсь «Дети своих отцов» романонть лангсо, кона лись Московсо «Современник» издательствасонть 1988 иестэ. 
 
-А. К. Мартынов содавикс ютавтыця. Эрзянь кельс ютавтыль В. Маяковскоень, [[Пушкин, Александр Сергеевич|А. Пушкинэнь]], М. Лермонтовонь, Н. Некрасовонь, К. Хетагуровонь, Т. Шевченконь, Я. Купалынь, А. Прокофьевэнь ды лиятнень шкинемаст.
+А. К. Мартынов содавикс ютавтыця. [[Эрзянь кель]]с ютавтыль В. Маяковскоень, [[Пушкин, Александр Сергеевич|А. Пушкинэнь]], М. Лермонтовонь, Н. Некрасовонь, К. Хетагуровонь, Т. Шевченконь, Я. Купалынь, А. Прокофьевэнь ды лиятнень шкинемаст.
 
 СССР-нь Сёрмадеень вейсэндявксонть совиця (саезь 1938 иестэ), Мордовиянь заслуженной сёрмадей (1973).
 
