*Empty MediaWiki Message*

--- a/Журавлёвонь,_Числав_Григорьевич.mw
+++ b/Журавлёвонь,_Числав_Григорьевич.mw
@@ -23,19 +23,19 @@
  |википурнавкс         = 
 }}
 
-'''Журавлёвонь Числав Григорьевич''' ([[1935 ие]]нь [[Чадыковонь 27 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан]] велесэ) — [[Эрзя|эрзянь]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> сёрмадей ды валморозей.
+'''Журавлёвонь Числав Григорьевич''' ([[1935 ие]]нь [[Чадыковонь 27 чи]]стэ [[Самарань ёнкс|Самарань ёнксонь]] [[Похвистневань буе Самарань ёнксcо|Похвистнева буе]]нь [[Покш Толкан веле (Похвистнева буень)|Покш Толкан велесэ<ref name="finugor.ru">[http://finugor.ru/news/erzyanskiy-poet-chislav-zhuravlyov-k-dnyu-rozhdeniya-predstavil-svoe-tvorchestvo-v-internete finugor.ru Эрзянский поэт Числав Журавлёв к дню рождения представил свое творчество в Интернете{{Ref-ru}}]</ref>]]) — [[Эрзя|эрзянь]]<ref name="Время и события, 2010">Время и события. 2010 Библиографический указатель. Указ Главы Республики Мордовия{{ref-ru}}</ref> сёрмадей ды валморозей.
 
 == Эстедензэ ==
-Школадо мейле прядызе Вишка Толканонь педучилищанть ды кармась важодеме Кошкинань буень Чесноковка велень школасо физкультурань тонавтыцякс. Колмо иеть (1954—1957) служась армиясо, теде мейле кемень иень перть важодсь Сибирьсэ зярыя таркава  ды эрьва кодамо важодемасо. 1967-це иестэ велявтсь Самарав. Волгоградонь физической культурань институтонть прядомадо мейле пенсияв туемазонзо важодсь физкультурань учителекс школасо.
+Школадо мейле прядызе Вишка Толканонь педучилищанть<ref name="Библиотека_Журавлев">[http://www.lib.e-mordovia.ru/Library/?Char=%C6&id=1Библиотека Мордовской литературы. Журавлев Вячеслав Григорьевич] {{ref-ru}}</ref> ды кармась важодеме Кошкинань буень Чесноковка велень школасо физкультурань тонавтыцякс. Колмо иеть (1954—1957) служась армиясо, теде мейле кемень иень перть важодсь Сибирьсэ зярыя таркава  ды эрьва кодамо важодемасо. 1967-це иестэ велявтсь Самарав. Волгоградонь физической культурань институтонть прядомадо мейле пенсияв туемазонзо важодсь физкультурань учителекс школасо.
 
-Литературань килангс  васенце чалгавтыцязо ульнесь эрзянь сёрмадеесь [[Радаевень, Василий Иванович|Василий Кузьмич Радаев]], кона Покш Толканонь школасо ветясь [[эрзянь кель]] ды литература. 1982-це иестэ «Эрзянь правда» кулялопасо ды «Сятко» ковставксо печатазельть валморонь покш пусмонзо. Седе тов Числав Журавлёвонь валморонзо совавтозельть «Маней васолкст» ды «Горизонт» вейсэнь пурнавксненэ. 
+Литературань килангс  васенце чалгавтыцязо ульнесь эрзянь сёрмадеесь [[Радаевень, Василий Иванович|Василий Кузьмич Радаев]], кона Покш Толканонь школасо ветясь [[эрзянь кель]] ды литература. 1982-це иестэ «Эрзянь правда» кулялопасо ды «Сятко» ковставксо печатазельть валморонь покш пусмонзо<ref name="ГБУ РК_Журавлев">[http://www.nbrkomi.ru/page/2921/  ГБУ РК «Национальная библиотека Республики Коми». Журавлев Вячеслав Григорьевич]{{ref-ru}}</ref>. Седе тов Числав Журавлёвонь валморонзо совавтозельть «Маней васолкст» ды «Горизонт» вейсэнь пурнавксненэ. 
 
 [[1990]] иестэ ульнесь Самара ёнксонь эрзя-мокшонь «Масторава» вейсендявксонть теицякс-пурныцякс.  
 Журавлёвонь Числавонь  лементь пек парсте содасызь поэзиянь вечкицятне. Валморонзо лиснить кода [[Саран ош|Саран ошсо]] - максневить «Сятко», [[«Чилисема» (журнал)|«Чилисема»]] ковставкснэсэ, [[«Эрзянь Мастор» (кулялопа)|«Эрзянь Мастор»]] ды «Эрзянь Правда» кулялопатнесэ. 
 
 Зярыя иеть Самара ошонь «Радио-7» студиясо ветясь эрзянь кельсэ передачат, - сонзэ вайгелезэ гайгиль эрзянь пачтямокерькстнесэ, конат пек тукшныльть аволь ансяк Самара ёнкссонь эриця эрзятнень мельс, — весе сеть таркатневаяк, ков пачкодильть эрзянь студиянть радиоволнанзо. 1999-це иестэ кармась улеме [[Суоми Мастор]]онь М.А. Кастренэнь Вейсэндявксонь Прявт премиянь лауреатокс — изнясь конкурссо, кона ютавтозель Россиянь финнэнь-угрань радиожурналисттнэнь ютксо. Самарань губернаторонь литературань премиянь лауреат (2005). 
 
-1996-це иестэ саезь Числав Журавлёв — [[Россиянь Мастор|Россиянь]] Сёрмадеень вейсендявксонть совиця, Мордовиянь заслуженной валморсёрмадей-поэтэсь. 
+1996-це иестэ саезь Числав Журавлёв — [[Россиянь Мастор|Россиянь]] Сёрмадеень вейсендявксонть совиця<ref name="Библиотека_Журавлев"/>, Мордовиянь заслуженной валморсёрмадей-поэтэсь. 
 
 Эри Самара ошсо.
 
