*Empty MediaWiki Message*

--- a/«Чилисема»_(журнал).mw
+++ b/«Чилисема»_(журнал).mw
@@ -11,7 +11,7 @@
 * [[Абрамов, Кузьма Григорьевич|Абрамов К. Г.]]
 * [[Баргова, Тамара Сергеевна|Баргова Т. С.]]
 * Барцева Е. В. (худ. редакторось)
-* Гребенцов Г. С.
+* [[Гребенцов Геннадий Сергеевич|Гребенцов Г. С]]
 * Демин В. И.
 * Доронин А. М.
 * Карпов И. И.
