--- a/Бозаев_веле_(Покш_Килейбуе).mw
+++ b/Бозаев_веле_(Покш_Килейбуе).mw
@@ -67,11 +67,13 @@
 Лемесь-антропоним: саеви эрзянь ''Нуркая Бузаева''<ref>Инжеватов И. К. Топонимический словарь Мордовской АССР: Названия населённых пунктов. Под ред. А. В. Никонова и Д. В. Цыганкина. 2-е изд., испр. и доп. Саранск, Мордов. кн. изд-во, 1987, C. 173, стр. 264 {{ref-ru}}</ref> лементь эйстэ. 
 
 == Содавикс ломанть те велестэнть ==
+* [[Гребенцов, Геннадий Сергеевич|Геннадий Гребенцов]]<ref name="ГБУ РК_Гребенцов">[http://www.nbrkomi.ru/page/2920/  ГБУ РК «Национальная библиотека Республики Коми». Гребенцов Геннадий Сергеевич]{{ref-ru}}</ref>—  эрзянь сёрмадей
+
 
 ==Таркат велесэнть<ref name="Память, запечатленная в слове"/> ==
 Ало килангонь пакся, Алопе, Ало пруд луга, Ашо лисьма латко, Бозов латко, Бозов пакся, Бозов пе, Ботуж угол, Бригада лисьма, Бригада луга,  Буя вирь, Вере паксянь ки, Вирь пандо, Вышка лей, Дербеж латко, Калмазэрь гора, Каль алкс, Каммунна луга, Кельме лисьмапря, Кисляй, Кошель яма, Курцля пандо, Курця латко (лейне), Ламад вирь, Ламад вирь алкс, Ламад вирь алкс, Лаша, Ляпилей пакся, Ляпилей пандо, Манжурия (куро), Мар	пакся, Марфань панда, Мишинкань вирь, Палонь луга, Пандопря, Панжувт, Пила пей, Пиче пандо, Покш латко,  Пор латко, Потмо (пакся), Рубеж, Сапун пандо, Сарай пандо, Синтрезь луга, Сошань ал ёнкс пакся, Спорной, Спорной эрьке, Сыкрань лисьма, [[Тазналей]], Тазналей чей, Тазналейчей сэдь, Ташто Штырма, Тейтерень поля, Тинге верькс пандо чама, Торф яма, Тыга вирь, Устиянь пандо, Уфалатко, Церькува пандо, Цярманав пакся, Цярманав пандо, Чапамо лей, Чапамо латко.
 
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|Б]]
