*Empty MediaWiki Message*

--- a/Абрамов,_Кузьма_Григорьевич.mw
+++ b/Абрамов,_Кузьма_Григорьевич.mw
@@ -8,7 +8,7 @@
  |артовксонть эйсте = 
  |важодема ёрокчизе     = [[Эрзянь кель|эрзянь]] ды [[рузонь кель|рузонь]] кельтнесэ сёрмадей
  |чачома чись          = 12.11.1914
- |чачома тарка         = {{ЧачомаТарка|Эрзянь Найман веле|Ташто Найман веле (Покш Килейбуе)}}, {{ЧачомаТарка|Покш Килейбуе}}, {{ЧачомаТарка|Мордовия Республикась|Мордовиянь}}
+ |чачома тарка         = {{ЧачомаТарка|Эрзянь Найман веле||Ташто Найман веле (Покш Килейбуе)}}, {{ЧачомаТарка|Покш Килейбуе}}, {{ЧачомаТарка|Мордовия Республикась|Мордовиянь}}
  |гражданчи            = {{Масторкоцт|Россиянь Империя}}<br /> {{Масторкоцт|СССР}} <br /> {{Масторкоцт|Россия}}
  |кедьалксчи           = 
  |кулома чись          = 04.08.2008
