*Empty MediaWiki Message*

--- a/Таразбие_(Отяжбуе).mw
+++ b/Таразбие_(Отяжбуе).mw
@@ -81,12 +81,12 @@
 * М.Ф. Власова — тонавтыця
 * В.М. Живаев, Т.М. Ковалёва — кулят-сёрмадейть
 * А.И. Миронов —Ине Отечественной ойнань улиця
-* [[Прохоров, Пётр Васильевич|П.В. Прохоров]] — прозаик, Ине Отечественной ойнань улицят
+* [[Прохоров, Пётр Васильевич|П.В. Прохоров]]<ref name="Библиотека_Прохоров">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=10 Библиотека Мордовской литературы. Прохоров Петр Васильевич] {{ref-ru}}</ref> — прозаик, Ине Отечественной ойнань улицят
 * А.М. Живаева — [[Афганистан  Мастор|Афганистансо]] ойнань улиця
 
 == Веленть эрямозо ==
 Куротне<ref name="«Велесь течи»"/>: Черепаха, Паксяпе, Алопе, Вирьпе, Нахаловка.
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 
