*Empty MediaWiki Message*

--- a/Прохоров,_Пётр_Васильевич.mw
+++ b/Прохоров,_Пётр_Васильевич.mw
@@ -22,7 +22,7 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Пётр Васильевич Прохоров''' ([[1923 ие]]нь [[ацамковонь 5 чи]]стэ, [[Таразбие (Отяжбуень)|Таразбиесэ]] — [[1985 ие]]нь [[медьковонь 10 чи]]стэ, [[Саран ош]]) — содавикс эрзянь сёрмадыця.
+'''Пётр Васильевич Прохоров''' ([[1923 ие]]нь [[ацамковонь 5 чи]]стэ, [[Таразбие (Отяжбуень)|Таразбиесэ]]<ref name="Библиотека_Прохоров">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=10 Библиотека Мордовской литературы. Прохоров Петр Васильевич] {{ref-ru}}</ref> — [[1985 ие]]нь [[медьковонь 10 чи]]стэ, [[Саран ош]]) — содавикс эрзянь сёрмадыця.
 
 == Эстедензэ ==
 Чачсь сокиця-видицянь семиясо. Тонавтнесь Сталинградонь, Иркутонь ушманонь сюлмавксонь тонавтнемасо, Ушманонь-политикень академиясо Ленинэнь лемсэ. Ульнесь Омбоце Ине Масторонь ойнасонть. Казезь ордентнэсэ ды медальтнесэ. 1974 иестэ саезь — 1985 иенть видс —  Мордовиянь марксизмань-ленинизмань университетэнть директор.
@@ -30,16 +30,17 @@
 == Шкинемазо ==
 Васенце ёвтнемазо Прохоровонь Петрань «Штабонь начальник» ({{Lang-ru|«Руководитель штаба»}}) ульнесь печатазь [[Сятко (журнал-ковставкс)|«Сятко»]] ковкставксо («Искра», [[1974 ие|197]]4 иестэ).
 
-Мордовиянь книгань издательствасо неизеть лисемаст «Цидярдома» ({{Lang-ru|«Выстояли»}}, 1-це пусмось — [[1975 ие]]стэ, 2-сь — [[1978 ие]]стэ) ды «Стако изнямот» ({{Lang-ru|«Трудные победы»}}, [[1985 ие|1985]] иестэ), «Военной повесть» ({{Lang-ru|«Военные повести»}}, [[1980 ие|1980]] иестэ), «Генералдо повесть» ({{Lang-ru|«Повесть о генерале»}}, [[1980 ие|1980]] иестэ), документальнойть-художественнойть сёрмадовкст «М. А. Пуркаев» ([[1986 ие|1986]] иестэ).
+Мордовиянь книгань издательствасо неизеть лисемаст «Цидярдома» ({{Lang-ru|«Выстояли»}}, 1-це пусмось — [[1975 ие]]стэ, 2-сь — [[1978 ие]]стэ) ды «Стако изнямот» ({{Lang-ru|«Трудные победы»}}, [[1985 ие|1985]] иестэ), «Военной повесть» ({{Lang-ru|«Военные повести»}}, [[1980 ие|1980]] иестэ), «Генералдо повесть» ({{Lang-ru|«Повесть о генерале»}}, [[1980 ие|1980]] иестэ), документальнойть-художественнойть сёрмадовкст «М. А. Пуркаев»<ref name="Библиотека_Прохоров"/> ([[1986 ие|1986]] иестэ).
 
 «Ракетной дивизион» ёвтнемась ({{Lang-ru|«Ракетный дивизион»}}, [[1980 ие|1980]] иестэ) ёвтни неень шкань эрямосто армиясо.
 «Эрямонь лув» ёвтнемазо ({{Lang-ru|«Жизненные пути-дороги»}}, 1989 иестэ) сёрмадозь вейсхозонь велень 70-80 иетнень тувталтнэде.
-
 == Сёрм.: ==
 * Кирюшкин Б. «Формирование нового жанра» / Сов. Мордовия. — 1979.
 * Брыжинский А. И. «Военная проза Петра Прохорова» / Современная мордовская литература. 60-80-е годы: В 2-х ч. — Саранск, 1991 .- Ч.1
 * «Мордовия. Кто есть кто. Энциклопедический словарь-справочник» / Ульяновск, 1997 .- С.330.
 
+== Лисьм.: ==
+<references />
 [[Category:Эрзякс кортыцят|П]]
 [[Category:Эрзянь сёрмадейть|П]]
 [[Category:Эрзянь кель|П]]
