*Empty MediaWiki Message*

--- a/Прохоров,_Пётр_Васильевич.mw
+++ b/Прохоров,_Пётр_Васильевич.mw
@@ -22,11 +22,11 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Пётр Васильевич Прохоров''' ([[1923 ие]]нь [[ацамковонь 5 чи]]стэ, [[Таразбие (Отяжбуень)|Таразбиесэ]]<ref name="Библиотека_Прохоров">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=10 Библиотека Мордовской литературы. Прохоров Петр Васильевич] {{ref-ru}}</ref> — [[1985 ие]]нь [[медьковонь 10 чи]]стэ, [[Саран ош]]) — содавикс эрзянь сёрмадыця.
+'''Пётр Васильевич Прохоров''' ([[1923 ие]]нь [[ацамковонь 5 чи]]стэ, [[Таразбие (Отяжбуень)|Таразбиесэ]]<ref name="Библиотека_Прохоров">[http://www.lib.e-mordovia.ru/Library/?Char=%CF&id=10 Библиотека Мордовской литературы. Прохоров Петр Васильевич] {{ref-ru}}</ref> — [[1985 ие]]нь [[медьковонь 10 чи]]стэ, [[Саран ош]]) — содавикс эрзянь сёрмадыця. Ушмадей<ref name="Администрация ГО Саранск">[http://adm-saransk.ru/news/?ELEMENT_ID=8644 Администрация городского округа Саранск. 10 декабря музей им. А.И. Полежаева приглашает на вечер памяти «Жизненные пути-дороги» и открытие выставки «Мордовский прозаик П.В. Прохоров»] {{ref-ru}}</ref>. Полковник<ref name="Республиканская архивная_Прохоров"/>.
 
 == Эстедензэ ==
-Чачсь сокиця-видицянь семиясо. Тонавтнесь Сталинградонь, Иркутонь ушманонь сюлмавксонь тонавтнемасо, Ушманонь-политикень академиясо Ленинэнь лемсэ. Ульнесь Омбоце Ине Масторонь ойнасонть. Казезь ордентнэсэ ды медальтнесэ. 1974 иестэ саезь — 1985 иенть видс —  Мордовиянь марксизмань-ленинизмань университетэнть директор.
-
+Чачсь сокиця-видицянь семиясо. Тонавтнесь Сталинградонь, Иркутонь ушманонь сюлмавксонь тонавтнемасо, Ушманонь-политикень академиясо Ленинэнь лемсэ. Ульнесь Омбоце Ине Масторонь ойнасонть. Казезь ордентнэсэ ды медальтнесэ («Якстере Тештень» орденсэ<ref name="Республиканская архивная_Прохоров">[http://www.sudbasoldata.ru/5282/ Республиканская архивная служба Республики Мордовия Прохоров Петр Васильевич] {{ref-ru}}</ref>). 1974 иестэ саезь — 1985 иенть видс —  Мордовиянь марксизмань-ленинизмань университетэнть директор<ref name="Администрация ГО Саранск"/>.
+.
 == Шкинемазо ==
 Васенце ёвтнемазо Прохоровонь Петрань «Штабонь начальник» ({{Lang-ru|«Руководитель штаба»}}) ульнесь печатазь [[Сятко (журнал-ковставкс)|«Сятко»]] ковкставксо («Искра», [[1974 ие|197]]4 иестэ).
 
