*Empty MediaWiki Message*

--- a/Пуркаевень,_Максим_Алексеевич.mw
+++ b/Пуркаевень,_Максим_Алексеевич.mw
@@ -1,1 +1,36 @@
-пуркаев максим алексеевич-советский военачальник
+
+{{Ломанесь
+ |лем                  = Пуркаевень Максим
+ |оригинальной лем      = 
+ |чачома лем         = Максим Алексеевич Пуркаев
+ |артовкс              = 
+ |артовксонть покшолмазо   = 
+ |артовксонть эйсте = 
+ |важодема ёрокчизе     = содавикс [[эрзят|эрзянь ломанень]] Ине ушман. Генерал.
+ |чачома чись          = 26.08.1894
+ |чачома тарка         = {{ЧачомаТарка|Пичале||Пичале (Тумобуе)}}, {{ЧачомаТарка|Тумобуе}}
+ |гражданство            = {{Масторкоцт|Россиянь Империя}}<br /> {{Масторкоцт|СССР}}
+ |подданство           = 
+ |кулома чись          = 1.01.1953 
+ |кулома тарка         = {{КуломаТарка|Москов ош}}
+ |тетязо               = Алексей Андреевич Пуркаев
+ |авазо                = Пелагея Павловна Пуркаева
+ |мирдезэ              = 
+ |низэ                 = 
+ |эйкакшонзо           = 
+ |казнеть ды медальть  = 
+ |автограф             = 
+ |вальма                = 
+ |википурнавкс         = 
+}}
+'''Пуркаевень Максим Алексеевич'''  — содавикс [[эрзят|эрзянь ломанень]] Ине ушман. Ине Ойнань полконьветий. Генерал. 
+
+== Эрямопингезэ ==
+Чачсь [[1894]] [[умарьковонь 26 чи]]стэ [[Тумобуе]] [[Пичале (Тумобуе)|Налитово]] эрзянь велесэ.
+
+== Ушмодеень эрямопингезэ ==
+
+
+[[Category:Эрзянь Ине ломанть]]
+[[Category:Эрзянь ушман|П]]
+[[Category:Эрзякс кортыцят|П]]
