*Empty MediaWiki Message*

--- a/Пуркаевень,_Максим_Алексеевич.mw
+++ b/Пуркаевень,_Максим_Алексеевич.mw
@@ -26,7 +26,7 @@
 '''Пуркаевень Максим Алексеевич'''  — содавикс [[эрзят|эрзянь ломанень]] Ине ушман. Ине Ойнань полконьветий. Генерал. 
 
 == Эрямопингезэ ==
-Чачсь [[1894]] [[умарьковонь 26 чи]]стэ [[Тумобуе]] [[Пичале (Тумобуе)|Налитово]] эрзянь велесэ.
+Чачсь [[1894]] [[умарьковонь 26 чи]]стэ [[Тумобуе]]нь [[Пичале (Тумобуе)|Налитово]] эрзянь велесэ.
 
 == Ушмодеень эрямопингезэ ==
 
