*Empty MediaWiki Message*

--- a/Пуркаевень,_Максим_Алексеевич.mw
+++ b/Пуркаевень,_Максим_Алексеевич.mw
@@ -23,13 +23,15 @@
  |вальма                = 
  |википурнавкс         = 
 }}
-'''Пуркаевень Максим Алексеевич'''  — содавикс [[эрзят|эрзянь ломанень]] Ине ушман. Ине Ойнань полконьветий. Генерал. 
+'''Пуркаевень Максим Алексеевич'''  — содавикс [[эрзят|эрзянь ломанень]]<ref name="Герои Мордовия Пуркаев">[http://geroi-mordovii.blogspot.ru/2011/09/blog-post.html Герои Мордовия Пуркаев Максим Алексеевич] {{ref-ru}}</ref><ref name="МРОКМ">[http://www.mrkm.ru/news/?date=20141106 «МРОКМ им. И.Д. Воронина» Парад 1941 года] {{ref-ru}}</ref> Ине ушман. Ине Ойнань полконьветий. Генерал. 
 
 == Эрямопингезэ ==
-Чачсь [[1894]] [[умарьковонь 26 чи]]стэ [[Тумобуе]]нь [[Пичале (Тумобуе)|Налитово]] эрзянь велесэ.
+Чачсь [[1894]] [[умарьковонь 26 чи]]стэ [[Тумобуе]]нь [[Пичале (Тумобуе)|Налитово]]<ref name="Генерал Пуркаев">Генерал Пуркаев: биобиблиографический указатель / Нац. б-ка им. А.С. Пушкина Респ. Мордовия, Отд. справ.-библиогр. и информ. обслуживания; [сост.: С.Х. Кильдеева, Т.В. Кистанова]. – Саранск, 2013. – 49 с. – (Серия «Их именами славен наш край»; вып. 3) {{ref-ru}}</ref> эрзянь велесэ.
 
 == Ушмодеень эрямопингезэ ==
 
+== Лисьм.: ==
+<references />
 
 [[Category:Эрзянь Ине ломанть]]
 [[Category:Эрзянь ушман|П]]
