*Empty MediaWiki Message*

--- a/Пичеуры_(Чаунзабуе).mw
+++ b/Пичеуры_(Чаунзабуе).mw
@@ -70,10 +70,10 @@
 
 == Содавикс ломанть те велестэнть ==
 Пичеуры велесэ чачсть:
-*  Г. И. Кокорев — Гражданской ойнань ульниця. 
+*  [[Кокорев, Георгий Иванович|Георгий Кокорев]]<ref name="Министерство информатизации">[http://mininformsvyaz.e-mordovia.ru/content/view/3721/ Министерство информатизации и связи Республики Мордовия Герои Великой Отечественной войны - уроженцы Мордовии] {{ref-ru}}</ref> — Гражданской ойнань ульниця, Генерал-лейтенант. 
 * Е. В. Бурюкина-Пятайкина — Социалистической Важодемань Мараля ({{Lang-ru|Герой Социалистического Труда}}).
 * А. С. Шокорова — потявтыця.
-== Сёрм.: ==
+== Лисьм.: ==
 <references />
 
 [[Category:Мордовиянь велеть|П]]
